test/runtime/fail/fn/missing_args.hy

// expect error: Expected `\(` after function name in declaration

fn hello {
	// ...
}
